--- a/scss/component/_layout.scss
+++ b/scss/component/_layout.scss
@@ -2,6 +2,12 @@
     box-sizing: border-box;
 }
 
+html,
+body {
+    max-width: 100%;
+    overflow-x: hidden;
+}
+
 body {
     height: 100vh;
 }
@@ -11,6 +17,9 @@ body {
     padding: 5vh 0;
 }
 
+#heading {
+    display: none;
+}
 
 .folder-icon {
     position: absolute;
@@ -71,11 +80,6 @@ main {
 }
 
 .main-wrap {
-    display: block;
-    position: relative;
-    margin: 0 auto;
-    height: 100%;
-    text-align: center;
     padding: 3rem;
 }
 
@@ -91,18 +95,14 @@ main {
     border: 1px solid $primaryDarkPop;
     border-radius: 3% 2% 2% 0% / 2% 2% 79% 40%;
     transform-origin: bottom;
-    transition: all .5s;
-    overflow: auto;
-    &:hover {
-        transform: rotateX(95deg) skewX(-25deg);
-    }
+    transition: all .8s ease-in-out;
 }
 
 .folder-tab {
     display: block;
     position: absolute;
     padding: .6rem;
-    top: -4rem;
+    top: -3rem;
     border-radius: 51% 50% 0% 0% / 25% 29% 28% 32% ;
     text-align: left;
 }
@@ -113,7 +113,20 @@ main {
     padding: 1rem;
     max-width: 400px;
     border: 1px solid $primaryDarkPop;
-    border-radius: 3% 2% 0% 2% / 2% 2% 79% 40%  ;
+    border-radius: 3% 2% 0% 2% / 2% 2% 79% 40%;
+    text-align: center;
+    transform: rotateY(2deg);
+    &:hover {
+        .folder-front {
+            transform: rotateX(95deg) skewX(-25deg);
+        }
+    }
+}
+
+.frame {
+    padding: 1rem;
+    border: 5px dashed $tabColor2;
+    border-radius: 5px;
 }
 
 img {
@@ -165,8 +178,53 @@ footer {
     .pop-icon {
         position: static;
     }
-
+    .main-wrap,
+    #header,
+    #header-wrap {
+        max-width: 1024px;
+        margin: 0 auto;
+    }
     footer {
+        display: inline-block;
+        margin: auto;
+        width: 100%;
+        min-height: 5vh;
+        max-width: 1024px;
+    }
+}
+
+@media (min-width: 1024px) {
+    #heading {
+        display: inline-block;
+    }
+    .icon-text {
+        display: none;
+    }
+    .icons {
         display: block;
+    }
+    #menu-news {
+        transform: translate(0, 0);
+    }
+    #menu-style {
+        transform: translate(0, 0);
+    }
+    #menu-gallery {
+        transform: translate(0, 0);
+    }
+    #menu-game {
+        transform: translate(0, 0);
+    }
+    #menu-dashboard {
+        transform: translate(0, 0);
+    }
+    #menu-directory {
+        transform: translate(0, 0);
+    }
+    #menu-linkedin {
+        transform: translate(0, 0);
+    }
+    #menu-contact {
+        transform: translate(0, 0);
     }
 }
