--- a/scss/component/_typography.scss
+++ b/scss/component/_typography.scss
@@ -1,3 +1,11 @@
 body {
     font-family: 'Nunito', sans-serif;
 }
+
+#heading {
+    font-size: 80px;
+}
+
+.folder-tab {
+    font-size: 16px;
+}
